--- a/settings.html
+++ b/settings.html
@@ -2,44 +2,42 @@
 <html lang="ar">
 <head>
   <meta charset="UTF-8">
-  <title>الإعدادات</title>
+  <title>إعدادات الحساب</title>
   <style>
     body {
-      font-family: Arial;
-      background-color: #f2f2f2;
+      font-family: sans-serif;
+      background: #f0f0f0;
       padding: 20px;
-      direction: rtl;
+      text-align: center;
     }
-    .btn {
-      padding: 10px;
-      margin: 10px 0;
-      border: none;
-      background-color: #0084ff;
+    h2 {
+      color: #333;
+    }
+    button {
+      padding: 10px 20px;
+      margin: 10px;
+      background-color: #4CAF50;
       color: white;
+      border: none;
+      border-radius: 8px;
       cursor: pointer;
-      width: 100%;
     }
-    .btn.danger {
-      background-color: crimson;
-    }
-    .dark-mode {
-      background-color: #111;
-      color: #fff;
+    button:hover {
+      background-color: #45a049;
     }
   </style>
 </head>
 <body>
-  <h2>الإعدادات</h2>
-  <button class="btn" onclick="toggleTheme()">تغيير المظهر (مظلم/عادي)</button>
-  <button class="btn" onclick="logout()">تسجيل الخروج</button>
-  <button class="btn danger" onclick="deleteAccount()">حذف الحساب نهائياً</button>
-  <a href="https://t.me/UUYFU" class="btn" target="_blank">الإبلاغ عن مشكلة</a>
+
+  <h2>إعدادات الحساب</h2>
+
+  <button onclick="sendVerificationEmail()">التحقق من البريد الإلكتروني</button><br>
+  <button onclick="deleteAccount()">حذف الحساب نهائيًا</button><br>
+  <button onclick="goBack()">الرجوع للدردشة</button>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-    import {
-      getAuth, signOut, deleteUser, onAuthStateChanged
-    } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+    import { getAuth, sendEmailVerification, deleteUser, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyDkL37i0-pd885YbCBYOkADYQVQINcswhk",
@@ -52,29 +50,49 @@
 
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
+    let currentUser;
 
-    window.logout = function () {
-      signOut(auth).then(() => {
-        alert("تم تسجيل الخروج");
+    onAuthStateChanged(auth, (user) => {
+      if (user) {
+        currentUser = user;
+      } else {
+        alert("يرجى تسجيل الدخول أولاً.");
         window.location.href = "index.html";
-      });
-    };
+      }
+    });
+
+    window.sendVerificationEmail = function () {
+      if (currentUser.emailVerified) {
+        alert("تم التحقق بالفعل.");
+        return;
+      }
+
+      sendEmailVerification(currentUser)
+        .then(() => {
+          alert("تم إرسال رابط التحقق لبريدك.");
+        })
+        .catch((error) => {
+          alert("خطأ: " + error.message);
+        });
+    }
 
     window.deleteAccount = function () {
-      const user = auth.currentUser;
-      if (confirm("هل أنت متأكد أنك تريد حذف الحساب نهائيًا؟")) {
-        deleteUser(user).then(() => {
-          alert("تم حذف الحساب.");
-          window.location.href = "index.html";
-        }).catch((error) => {
-          alert("فشل في حذف الحساب: " + error.message);
-        });
+      if (confirm("هل أنت متأكد من حذف الحساب نهائيًا؟")) {
+        deleteUser(currentUser)
+          .then(() => {
+            alert("تم حذف الحساب.");
+            window.location.href = "index.html";
+          })
+          .catch((error) => {
+            alert("خطأ أثناء حذف الحساب: " + error.message);
+          });
       }
-    };
+    }
 
-    window.toggleTheme = function () {
-      document.body.classList.toggle("dark-mode");
-    };
+    window.goBack = function () {
+      window.location.href = "chat.html";
+    }
   </script>
+
 </body>
 </html>
