--- a/edit-profile.html
+++ b/edit-profile.html
@@ -5,50 +5,68 @@
   <title>تعديل الملف الشخصي</title>
   <style>
     body {
-      font-family: Arial;
-      background-color: #f0f0f0;
+      font-family: sans-serif;
+      background: #e9f5f5;
+      padding: 20px;
       direction: rtl;
-      text-align: center;
-      padding: 40px;
     }
-    input, textarea, button {
+    h2 {
+      text-align: center;
+      color: #444;
+    }
+    form {
+      max-width: 400px;
+      margin: auto;
+      background: #fff;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 8px rgba(0,0,0,0.1);
+    }
+    input, select {
+      width: 100%;
       padding: 10px;
-      margin: 10px;
-      width: 80%;
-      max-width: 300px;
+      margin: 10px 0;
+      border-radius: 6px;
+      border: 1px solid #ccc;
     }
     button {
-      background-color: #28a745;
-      border: none;
+      background: #007bff;
       color: white;
+      padding: 10px;
+      border: none;
+      width: 100%;
+      border-radius: 6px;
       cursor: pointer;
     }
-    img {
-      width: 100px;
-      height: 100px;
-      border-radius: 50%;
-      object-fit: cover;
-      margin: 10px;
+    button:hover {
+      background: #0056b3;
     }
   </style>
 </head>
 <body>
 
   <h2>تعديل الملف الشخصي</h2>
-  <img id="profileImage" src="default.png" alt="صورة الملف الشخصي" />
-  <input type="file" id="imageInput" accept="image/*"><br>
-  <input type="text" id="displayName" placeholder="الاسم الكامل"><br>
-  <textarea id="status" placeholder="الحالة..."></textarea><br>
-  <button onclick="saveProfile()">حفظ التعديلات</button>
+
+  <form id="editForm">
+    <input type="text" id="name" placeholder="اسمك الكامل" required>
+    <input type="text" id="photoURL" placeholder="رابط الصورة الشخصية">
+    <select id="status">
+      <option value="متصل">متصل</option>
+      <option value="مشغول">مشغول</option>
+      <option value="غير متاح">غير متاح</option>
+    </select>
+    <button type="submit">حفظ التعديلات</button>
+  </form>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-    import { getAuth, updateProfile, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
-    import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-storage.js";
+    import { getAuth, onAuthStateChanged, updateProfile } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+    import { getDatabase, ref, update } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-database.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyDkL37i0-pd885YbCBYOkADYQVQINcswhk",
       authDomain: "messengerapp-58f7a.firebaseapp.com",
+      databaseURL: "https://messengerapp-58f7a-default-rtdb.firebaseio.com",
       projectId: "messengerapp-58f7a",
       storageBucket: "messengerapp-58f7a.appspot.com",
       messagingSenderId: "46178168523",
@@ -57,43 +75,37 @@
 
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
-    const storage = getStorage(app);
-
-    let currentUser;
+    const db = getDatabase(app);
 
     onAuthStateChanged(auth, (user) => {
       if (user) {
-        currentUser = user;
-        document.getElementById("displayName").value = user.displayName || "";
-        document.getElementById("profileImage").src = user.photoURL || "default.png";
-        // لاحقاً يمكن جلب الحالة من قاعدة البيانات
+        document.getElementById("editForm").addEventListener("submit", (e) => {
+          e.preventDefault();
+          const name = document.getElementById("name").value;
+          const photoURL = document.getElementById("photoURL").value;
+          const status = document.getElementById("status").value;
+
+          updateProfile(user, { displayName: name, photoURL })
+            .then(() => {
+              return update(ref(db, 'users/' + user.uid), {
+                name,
+                photoURL,
+                status
+              });
+            })
+            .then(() => {
+              alert("تم تحديث الملف الشخصي بنجاح");
+              window.location.href = "chat.html";
+            })
+            .catch((error) => {
+              alert("خطأ: " + error.message);
+            });
+        });
       } else {
-        alert("يرجى تسجيل الدخول أولاً");
+        alert("يرجى تسجيل الدخول");
         window.location.href = "index.html";
       }
     });
-
-    async function saveProfile() {
-      const name = document.getElementById("displayName").value;
-      const file = document.getElementById("imageInput").files[0];
-
-      let photoURL = currentUser.photoURL;
-
-      if (file) {
-        const storageRef = ref(storage, "profile_images/" + currentUser.uid + ".jpg");
-        await uploadBytes(storageRef, file);
-        photoURL = await getDownloadURL(storageRef);
-      }
-
-      updateProfile(currentUser, {
-        displayName: name,
-        photoURL: photoURL
-      }).then(() => {
-        alert("تم حفظ التعديلات بنجاح");
-      }).catch((error) => {
-        alert("حدث خطأ: " + error.message);
-      });
-    }
   </script>
 
 </body>
