--- a/reset-password.html
+++ b/reset-password.html
@@ -5,32 +5,55 @@
   <title>إعادة تعيين كلمة المرور</title>
   <style>
     body {
-      font-family: Arial;
-      background-color: #f9f9f9;
-      text-align: center;
-      padding: 50px;
+      font-family: sans-serif;
+      background: #f4f7fa;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
       direction: rtl;
     }
-    input, button {
+    .container {
+      background: white;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      max-width: 400px;
+      width: 100%;
+    }
+    h2 {
+      margin-bottom: 20px;
+      text-align: center;
+      color: #333;
+    }
+    input {
+      width: 100%;
       padding: 10px;
-      margin: 10px;
-      width: 80%;
-      max-width: 300px;
+      margin: 10px 0;
+      border-radius: 6px;
+      border: 1px solid #ccc;
     }
     button {
-      background-color: #0084ff;
-      border: none;
+      width: 100%;
+      padding: 10px;
+      background: #007bff;
       color: white;
+      border: none;
+      border-radius: 6px;
       cursor: pointer;
+    }
+    button:hover {
+      background: #0056b3;
     }
   </style>
 </head>
 <body>
-  <h2>نسيت كلمة المرور؟</h2>
-  <p>أدخل بريدك الإلكتروني لإرسال رابط إعادة التعيين:</p>
-  <input type="email" id="email" placeholder="البريد الإلكتروني" required />
-  <br>
-  <button onclick="resetPassword()">إرسال الرابط</button>
+
+  <div class="container">
+    <h2>نسيت كلمة المرور؟</h2>
+    <input type="email" id="email" placeholder="أدخل بريدك الإلكتروني" required>
+    <button onclick="resetPassword()">إرسال رابط إعادة التعيين</button>
+  </div>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
@@ -39,6 +62,7 @@
     const firebaseConfig = {
       apiKey: "AIzaSyDkL37i0-pd885YbCBYOkADYQVQINcswhk",
       authDomain: "messengerapp-58f7a.firebaseapp.com",
+      databaseURL: "https://messengerapp-58f7a-default-rtdb.firebaseio.com",
       projectId: "messengerapp-58f7a",
       storageBucket: "messengerapp-58f7a.appspot.com",
       messagingSenderId: "46178168523",
@@ -48,17 +72,19 @@
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
 
-    window.resetPassword = function () {
-      const email = document.getElementById("email").value;
-      if (!email) return alert("يرجى إدخال البريد الإلكتروني");
+    window.resetPassword = () => {
+      const email = document.getElementById("email").value.trim();
+      if (!email) return alert("يرجى إدخال البريد الإلكتروني.");
+
       sendPasswordResetEmail(auth, email)
         .then(() => {
-          alert("تم إرسال رابط إعادة تعيين كلمة المرور إلى بريدك.");
+          alert("تم إرسال رابط إعادة تعيين كلمة المرور إلى بريدك الإلكتروني.");
         })
         .catch((error) => {
-          alert("حدث خطأ: " + error.message);
+          alert("خطأ: " + error.message);
         });
     };
   </script>
+
 </body>
 </html>
