--- a/reset-password.html
+++ b/reset-password.html
@@ -6,53 +6,59 @@
   <style>
     body {
       font-family: sans-serif;
-      background: #f4f7fa;
+      background-color: #f9f9f9;
       display: flex;
-      align-items: center;
       justify-content: center;
+      align-items: center;
       height: 100vh;
       direction: rtl;
     }
+
     .container {
-      background: white;
+      background-color: white;
       padding: 30px;
       border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      max-width: 400px;
-      width: 100%;
-    }
-    h2 {
-      margin-bottom: 20px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.2);
+      width: 400px;
       text-align: center;
-      color: #333;
     }
+
     input {
-      width: 100%;
-      padding: 10px;
-      margin: 10px 0;
-      border-radius: 6px;
+      width: 90%;
+      padding: 12px;
+      margin-top: 15px;
       border: 1px solid #ccc;
+      border-radius: 8px;
     }
+
     button {
-      width: 100%;
-      padding: 10px;
-      background: #007bff;
+      margin-top: 20px;
+      padding: 12px;
+      width: 80%;
+      background-color: #007bff;
       color: white;
       border: none;
-      border-radius: 6px;
+      border-radius: 8px;
       cursor: pointer;
     }
+
     button:hover {
-      background: #0056b3;
+      background-color: #0056b3;
+    }
+
+    p {
+      margin-top: 10px;
+      color: #555;
     }
   </style>
 </head>
 <body>
 
   <div class="container">
-    <h2>نسيت كلمة المرور؟</h2>
-    <input type="email" id="email" placeholder="أدخل بريدك الإلكتروني" required>
-    <button onclick="resetPassword()">إرسال رابط إعادة التعيين</button>
+    <h2>إعادة تعيين كلمة المرور</h2>
+    <p>أدخل بريدك الإلكتروني لإرسال رابط إعادة تعيين كلمة المرور.</p>
+    <input type="email" id="email" placeholder="أدخل بريدك الإلكتروني">
+    <button onclick="resetPassword()">إرسال الرابط</button>
   </div>
 
   <script type="module">
@@ -73,15 +79,18 @@
     const auth = getAuth(app);
 
     window.resetPassword = () => {
-      const email = document.getElementById("email").value.trim();
-      if (!email) return alert("يرجى إدخال البريد الإلكتروني.");
+      const email = document.getElementById("email").value;
+      if (!email) {
+        alert("يرجى إدخال البريد الإلكتروني.");
+        return;
+      }
 
       sendPasswordResetEmail(auth, email)
         .then(() => {
           alert("تم إرسال رابط إعادة تعيين كلمة المرور إلى بريدك الإلكتروني.");
         })
         .catch((error) => {
-          alert("خطأ: " + error.message);
+          alert("حدث خطأ: " + error.message);
         });
     };
   </script>
