--- a/delete-account.html
+++ b/delete-account.html
@@ -6,7 +6,7 @@
   <style>
     body {
       font-family: sans-serif;
-      background-color: #fff0f0;
+      background-color: #fff5f5;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -17,38 +17,38 @@
     .container {
       background-color: white;
       padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.2);
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(255, 0, 0, 0.3);
       width: 400px;
       text-align: center;
     }
 
-    h2 {
-      color: #c00;
-    }
-
     button {
-      background-color: #c00;
+      margin-top: 20px;
+      padding: 12px;
+      width: 80%;
+      background-color: #dc3545;
       color: white;
       border: none;
-      padding: 12px 20px;
-      font-size: 16px;
       border-radius: 8px;
       cursor: pointer;
-      margin-top: 20px;
     }
 
     button:hover {
-      background-color: #a00;
+      background-color: #c82333;
+    }
+
+    p {
+      color: #444;
     }
   </style>
 </head>
 <body>
 
   <div class="container">
-    <h2>هل أنت متأكد أنك تريد حذف حسابك؟</h2>
-    <p>لا يمكنك استرجاعه لاحقًا، سيتم حذف جميع بياناتك!</p>
-    <button onclick="deleteAccount()">حذف الحساب نهائياً</button>
+    <h2>حذف الحساب</h2>
+    <p>هل أنت متأكد أنك تريد حذف حسابك؟ لا يمكن التراجع عن هذا القرار.</p>
+    <button onclick="deleteAccount()">نعم، احذف حسابي</button>
   </div>
 
   <script type="module">
@@ -68,20 +68,22 @@
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
 
-    window.deleteAccount = () => {
+    function deleteAccount() {
       onAuthStateChanged(auth, (user) => {
         if (user) {
           deleteUser(user).then(() => {
             alert("تم حذف الحساب بنجاح.");
-            window.location.href = "index.html"; // توجيه لصفحة البداية
+            window.location.href = "index.html";
           }).catch((error) => {
-            alert("حدث خطأ: " + error.message);
+            alert("حدث خطأ أثناء حذف الحساب: " + error.message);
           });
         } else {
-          alert("أنت غير مسجل الدخول.");
+          alert("يرجى تسجيل الدخول أولاً.");
         }
       });
-    };
+    }
+
+    window.deleteAccount = deleteAccount;
   </script>
 
 </body>
