--- a/index.html
+++ b/index.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-  <meta charset="UTF-8">
-  <title>الدردشة</title>
-  <script type="module" src="./scripts/chat.js"></script>
-  <link rel="stylesheet" href="./styles/chat.css">
+  <meta charset="UTF-8" />
+  <title>تطبيق المراسلة</title>
+  <link rel="stylesheet" href="styles/index.css" />
 </head>
 <body>
-  <div id="chat-container">
-    <div id="friends-list">
-      <h2>الأصدقاء</h2>
-      <ul id="friends"></ul>
-    </div>
-    <div id="chat-box">
-      <h3 id="chat-with">اختر صديق</h3>
-      <div id="messages"></div>
-      <div id="send-message">
-        <input type="text" id="messageInput" placeholder="اكتب رسالة...">
-        <button id="sendBtn">إرسال</button>
-      </div>
-    </div>
-  </div>
+  <nav>
+    <a href="login.html">تسجيل الدخول</a>
+    <a href="signup.html">إنشاء حساب</a>
+    <a href="chat.html">الدردشة</a>
+    <a href="profile.html">الملف الشخصي</a>
+    <a href="reset.html">نسيت كلمة المرور</a>
+    <a href="settings.html">الإعدادات</a>
+  </nav>
+  <main>
+    <h1>مرحباً بك في تطبيق المراسلة</h1>
+  </main>
 </body>
 </html>
