--- a/settings.html
+++ b/settings.html
@@ -1,13 +1,18 @@
-<!DOCTYPE html>
-<html lang="ar">
-<head>
-  <meta charset="UTF-8" />
-  <title>إعدادات الحساب</title>
-  <script type="module" src="scripts/settings.js"></script>
-</head>
-<body>
-  <h2>إعدادات الحساب</h2>
+<div class="settings-page">
+  <h2>الإعدادات</h2>
+  
   <button id="logoutBtn">تسجيل الخروج</button>
-  <button id="deleteAccountBtn">حذف الحساب نهائياً</button>
-</body>
-</html>
+  <button id="deleteAccountBtn">حذف الحساب نهائيًا</button>
+  
+  <label>
+    <input type="checkbox" id="darkModeToggle">
+    تفعيل الوضع الليلي
+  </label>
+
+  <br><br>
+  <a href="https://t.me/UUYFU" target="_blank">الإبلاغ عن مشكلة</a>
+
+  <div id="settingsMessage"></div>
+</div>
+
+<script src="scripts/settings.js"></script>
