--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>تطبيق المراسلة</title>
-  <link rel="stylesheet" href="styles/index.css" />
+    <meta charset="UTF-8">
+    <title>Renge - AI Chat</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <nav>
-    <a href="login.html">تسجيل الدخول</a>
-    <a href="signup.html">إنشاء حساب</a>
-    <a href="chat.html">الدردشة</a>
-    <a href="profile.html">الملف الشخصي</a>
-    <a href="reset.html">نسيت كلمة المرور</a>
-    <a href="settings.html">الإعدادات</a>
-  </nav>
-  <main>
-    <h1>مرحباً بك في تطبيق المراسلة</h1>
-  </main>
+    <div class="chat-container">
+        <div class="header">Renge - AI Chat</div>
+        <div id="chat-box" class="chat-box"></div>
+        <div class="input-area">
+            <input type="text" id="user-input" placeholder="اكتب رسالتك هنا..." autocomplete="off">
+            <button id="send-btn">إرسال</button>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
