--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 <head>
     <meta charset="UTF-8">
-    <title>Renge - AI Chat</title>
+    <title>Renge - ذكاء اصطناعي</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="chat-container">
-        <div class="header">Renge - AI Chat</div>
+        <div class="header">Renge - دردشة ذكاء اصطناعي</div>
         <div id="chat-box" class="chat-box"></div>
         <div class="input-area">
             <input type="text" id="user-input" placeholder="اكتب رسالتك هنا..." autocomplete="off">
