--- a/index.html
+++ b/index.html
@@ -1,43 +1,20 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="ar">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>دردشة AI مجانية</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background: #f5f5f5;
-        }
-        .header {
-            background: #0066ff;
-            color: white;
-            padding: 15px;
-            text-align: center;
-        }
-        #deepseek-iframe {
-            width: 100%;
-            height: 80vh;
-            border: none;
-            margin: 0 auto;
-            display: block;
-        }
-    </style>
+    <title>Renge - ذكاء اصطناعي للدردشة</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">
-        <h1>دردشة ذكاء اصطناعي مجانية</h1>
+
+    <div class="container">
+        <h1>مرحباً بك في Renge</h1>
+        <p>ابدأ الدردشة مع الذكاء الاصطناعي عبر الضغط على الأيقونة في الأسفل!</p>
     </div>
-    <iframe 
-        id="deepseek-iframe"
-        src="https://chat.deepseek.com"
-        allow="microphone; camera"
-        sandbox="allow-scripts allow-same-origin"
-    ></iframe>
-    <p style="text-align: center; color: #555;">
-        هذه الدردشة تعمل بـ <strong>DeepSeek Chat</strong> - لا تحتاج إلى أي إعدادات!
-    </p>
+
+    <!-- سكربت Tidio Chat الذي طلبته -->
+    <script src="//code.tidio.co/ruznvyxvqtlaaklrmzdnbcbjqoax0w3f.js" async></script>
+
 </body>
 </html>
