--- a/signup.html
+++ b/signup.html
@@ -2,18 +2,59 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Signup</title>
+  <title>Sign Up</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h2>Signup</h2>
-    <input type="email" id="email" placeholder="Email" required>
-    <input type="password" id="password" placeholder="Password" required>
-    <button onclick="signup()">Signup</button>
-    <p>Already have an account? <a href="index.html">Login here</a></p>
-  </div>
 
-  <script type="module" src="app.js"></script>
+<form id="signupForm">
+  <h2>Sign Up</h2>
+  <div id="signupMessage" class="message"></div>
+  <input type="email" id="signupEmail" placeholder="Email" required>
+  <input type="password" id="signupPassword" placeholder="Password" required>
+  <button type="submit">Create Account</button>
+  <p>Already have an account? <a href="login.html">Login</a></p>
+</form>
+
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
+  import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
+
+  const firebaseConfig = {
+    apiKey: "AIzaSyDkL37i0-pd885YbCBYOkADYQVQINcswhk",
+    authDomain: "messengerapp-58f7a.firebaseapp.com",
+    databaseURL: "https://messengerapp-58f7a-default-rtdb.firebaseio.com",
+    projectId: "messengerapp-58f7a",
+    storageBucket: "messengerapp-58f7a.appspot.com",
+    messagingSenderId: "46178168523",
+    appId: "1:46178168523:web:cba8a71de3d7cc5910f54e"
+  };
+
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
+
+  const signupForm = document.getElementById('signupForm');
+  const signupMessage = document.getElementById('signupMessage');
+
+  signupForm.addEventListener('submit', (e) => {
+    e.preventDefault();
+    const email = document.getElementById('signupEmail').value;
+    const password = document.getElementById('signupPassword').value;
+
+    createUserWithEmailAndPassword(auth, email, password)
+      .then((userCredential) => {
+        signupMessage.textContent = "Account created successfully!";
+        signupMessage.className = "message success";
+        setTimeout(() => {
+          window.location.href = "login.html";
+        }, 1500);
+      })
+      .catch((error) => {
+        signupMessage.textContent = "Error: " + error.message;
+        signupMessage.className = "message error";
+      });
+  });
+</script>
+
 </body>
 </html>
