--- a/chat.html
+++ b/chat.html
@@ -27,9 +27,8 @@
         </ul>
     </div>
 
+    <!-- ربط ملفات JavaScript -->
     <script src="firebase-config.js"></script>
-    <script src="chat.js"></script>
-    <script src="profile.js"></script>
-    <script src="friends.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
