--- a/login.html
+++ b/login.html
@@ -1,60 +1,82 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 <head>
-  <meta charset="UTF-8">
-  <title>Login</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>تسجيل الدخول</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <header>
+            <h1>تسجيل الدخول</h1>
+        </header>
+        
+        <div class="login-section">
+            <form id="loginForm">
+                <div class="form-group">
+                    <label for="email">البريد الإلكتروني</label>
+                    <input type="email" id="email" placeholder="أدخل بريدك الإلكتروني" required>
+                </div>
+                <div class="form-group">
+                    <label for="password">كلمة المرور</label>
+                    <input type="password" id="password" placeholder="أدخل كلمة المرور" required>
+                </div>
+                <button type="submit">تسجيل الدخول</button>
+            </form>
 
-<form id="loginForm">
-  <h2>Login</h2>
-  <div id="loginMessage" class="message"></div>
-  <input type="email" id="loginEmail" placeholder="Email" required>
-  <input type="password" id="loginPassword" placeholder="Password" required>
-  <button type="submit">Login</button>
-  <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
-</form>
+            <p id="error-message" class="error-message"></p>
 
-<script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-  import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
+            <p>ليس لديك حساب؟ <a href="signup.html">سجل هنا</a></p>
+        </div>
+    </div>
 
-  const firebaseConfig = {
-    apiKey: "AIzaSyDkL37i0-pd885YbCBYOkADYQVQINcswhk",
-    authDomain: "messengerapp-58f7a.firebaseapp.com",
-    databaseURL: "https://messengerapp-58f7a-default-rtdb.firebaseio.com",
-    projectId: "messengerapp-58f7a",
-    storageBucket: "messengerapp-58f7a.appspot.com",
-    messagingSenderId: "46178168523",
-    appId: "1:46178168523:web:cba8a71de3d7cc5910f54e"
-  };
+    <script src="https://www.gstatic.com/firebasejs/9.5.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.5.0/firebase-auth.js"></script>
+    <script>
+        // Firebase configuration
+        const firebaseConfig = {
+            apiKey: "AIzaSyDkL37i0-pd885YbCBYOkADYQVQINcswhk",
+            authDomain: "messengerapp-58f7a.firebaseapp.com",
+            databaseURL: "https://messengerapp-58f7a-default-rtdb.firebaseio.com",
+            projectId: "messengerapp-58f7a",
+            storageBucket: "messengerapp-58f7a.firebasestorage.app",
+            messagingSenderId: "46178168523",
+            appId: "1:46178168523:web:cba8a71de3d7cc5910f54e"
+        };
 
-  const app = initializeApp(firebaseConfig);
-  const auth = getAuth(app);
+        // Initialize Firebase
+        const app = firebase.initializeApp(firebaseConfig);
+        const auth = firebase.auth();
 
-  const loginForm = document.getElementById('loginForm');
-  const loginMessage = document.getElementById('loginMessage');
+        // Get DOM elements
+        const loginForm = document.getElementById('loginForm');
+        const errorMessage = document.getElementById('error-message');
 
-  loginForm.addEventListener('submit', (e) => {
-    e.preventDefault();
-    const email = document.getElementById('loginEmail').value;
-    const password = document.getElementById('loginPassword').value;
+        // Login functionality
+        loginForm.addEventListener('submit', (event) => {
+            event.preventDefault();
 
-    signInWithEmailAndPassword(auth, email, password)
-      .then((userCredential) => {
-        loginMessage.textContent = "Login successful!";
-        loginMessage.className = "message success";
-        setTimeout(() => {
-          window.location.href = "chat.html";
-        }, 1500);
-      })
-      .catch((error) => {
-        loginMessage.textContent = "Error: " + error.message;
-        loginMessage.className = "message error";
-      });
-  });
-</script>
+            const email = document.getElementById('email').value;
+            const password = document.getElementById('password').value;
 
+            auth.signInWithEmailAndPassword(email, password)
+                .then(() => {
+                    window.location.href = 'chat.html'; // Redirect to the chat page
+                })
+                .catch((error) => {
+                    const errorCode = error.code;
+                    const errorMessageText = error.message;
+
+                    if (errorCode === 'auth/invalid-email') {
+                        errorMessage.textContent = "البريد الإلكتروني غير صحيح.";
+                    } else if (errorCode === 'auth/wrong-password') {
+                        errorMessage.textContent = "كلمة المرور غير صحيحة.";
+                    } else {
+                        errorMessage.textContent = "حدث خطأ يرجى المحاولة لاحقاً.";
+                    }
+                });
+        });
+    </script>
 </body>
 </html>
