--- a/signup.html
+++ b/signup.html
@@ -1,60 +1,92 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 <head>
-  <meta charset="UTF-8">
-  <title>Sign Up</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>إنشاء حساب</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <header>
+            <h1>إنشاء حساب جديد</h1>
+        </header>
+        
+        <div class="signup-section">
+            <form id="signupForm">
+                <div class="form-group">
+                    <label for="email">البريد الإلكتروني</label>
+                    <input type="email" id="email" placeholder="أدخل بريدك الإلكتروني" required>
+                </div>
+                <div class="form-group">
+                    <label for="password">كلمة المرور</label>
+                    <input type="password" id="password" placeholder="أدخل كلمة المرور" required>
+                </div>
+                <div class="form-group">
+                    <label for="confirmPassword">تأكيد كلمة المرور</label>
+                    <input type="password" id="confirmPassword" placeholder="أكد كلمة المرور" required>
+                </div>
+                <button type="submit">إنشاء حساب</button>
+            </form>
 
-<form id="signupForm">
-  <h2>Sign Up</h2>
-  <div id="signupMessage" class="message"></div>
-  <input type="email" id="signupEmail" placeholder="Email" required>
-  <input type="password" id="signupPassword" placeholder="Password" required>
-  <button type="submit">Create Account</button>
-  <p>Already have an account? <a href="login.html">Login</a></p>
-</form>
+            <p id="error-message" class="error-message"></p>
 
-<script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-  import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
+            <p>هل لديك حساب بالفعل؟ <a href="login.html">تسجيل الدخول</a></p>
+        </div>
+    </div>
 
-  const firebaseConfig = {
-    apiKey: "AIzaSyDkL37i0-pd885YbCBYOkADYQVQINcswhk",
-    authDomain: "messengerapp-58f7a.firebaseapp.com",
-    databaseURL: "https://messengerapp-58f7a-default-rtdb.firebaseio.com",
-    projectId: "messengerapp-58f7a",
-    storageBucket: "messengerapp-58f7a.appspot.com",
-    messagingSenderId: "46178168523",
-    appId: "1:46178168523:web:cba8a71de3d7cc5910f54e"
-  };
+    <script src="https://www.gstatic.com/firebasejs/9.5.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.5.0/firebase-auth.js"></script>
+    <script>
+        // Firebase configuration
+        const firebaseConfig = {
+            apiKey: "AIzaSyDkL37i0-pd885YbCBYOkADYQVQINcswhk",
+            authDomain: "messengerapp-58f7a.firebaseapp.com",
+            databaseURL: "https://messengerapp-58f7a-default-rtdb.firebaseio.com",
+            projectId: "messengerapp-58f7a",
+            storageBucket: "messengerapp-58f7a.firebasestorage.app",
+            messagingSenderId: "46178168523",
+            appId: "1:46178168523:web:cba8a71de3d7cc5910f54e"
+        };
 
-  const app = initializeApp(firebaseConfig);
-  const auth = getAuth(app);
+        // Initialize Firebase
+        const app = firebase.initializeApp(firebaseConfig);
+        const auth = firebase.auth();
 
-  const signupForm = document.getElementById('signupForm');
-  const signupMessage = document.getElementById('signupMessage');
+        // Get DOM elements
+        const signupForm = document.getElementById('signupForm');
+        const errorMessage = document.getElementById('error-message');
 
-  signupForm.addEventListener('submit', (e) => {
-    e.preventDefault();
-    const email = document.getElementById('signupEmail').value;
-    const password = document.getElementById('signupPassword').value;
+        // Sign Up functionality
+        signupForm.addEventListener('submit', (event) => {
+            event.preventDefault();
 
-    createUserWithEmailAndPassword(auth, email, password)
-      .then((userCredential) => {
-        signupMessage.textContent = "Account created successfully!";
-        signupMessage.className = "message success";
-        setTimeout(() => {
-          window.location.href = "login.html";
-        }, 1500);
-      })
-      .catch((error) => {
-        signupMessage.textContent = "Error: " + error.message;
-        signupMessage.className = "message error";
-      });
-  });
-</script>
+            const email = document.getElementById('email').value;
+            const password = document.getElementById('password').value;
+            const confirmPassword = document.getElementById('confirmPassword').value;
 
+            if (password !== confirmPassword) {
+                errorMessage.textContent = "كلمات المرور غير متطابقة!";
+                return;
+            }
+
+            auth.createUserWithEmailAndPassword(email, password)
+                .then(() => {
+                    window.location.href = 'login.html'; // Redirect to the login page after successful sign up
+                })
+                .catch((error) => {
+                    const errorCode = error.code;
+                    const errorMessageText = error.message;
+
+                    if (errorCode === 'auth/email-already-in-use') {
+                        errorMessage.textContent = "البريد الإلكتروني مُستخدم بالفعل.";
+                    } else if (errorCode === 'auth/weak-password') {
+                        errorMessage.textContent = "كلمة المرور ضعيفة جداً.";
+                    } else {
+                        errorMessage.textContent = "حدث خطأ يرجى المحاولة لاحقاً.";
+                    }
+                });
+        });
+    </script>
 </body>
 </html>
