--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 <head>
-  <meta charset="UTF-8">
-  <title>Login</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>تطبيق المراسلة</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h2>Login</h2>
-    <input type="email" id="email" placeholder="Email" required>
-    <input type="password" id="password" placeholder="Password" required>
-    <button onclick="login()">Login</button>
-    <p>Don't have an account? <a href="signup.html">Signup here</a></p>
-  </div>
+    <div class="container">
+        <header>
+            <h1>تطبيق المراسلة</h1>
+        </header>
 
-  <script type="module" src="app.js"></script>
+        <div class="auth-section">
+            <button onclick="window.location.href='login.html'">تسجيل الدخول</button>
+            <button onclick="window.location.href='signup.html'">إنشاء حساب</button>
+        </div>
+    </div>
+
+    <script src="https://www.gstatic.com/firebasejs/9.5.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.5.0/firebase-auth.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
